Fix alignment on orgs index page

--- a/app/assets/stylesheets/orgs.sass
+++ b/app/assets/stylesheets/orgs.sass
@@ -1,5 +1,9 @@
 #explore_orgs_page
   #orgs_by_30_days_volume
+    min-height: 260px
+    margin-left: 10px
+    #sort_by
+      margin-top: 10px
     label#filter
       margin-top: 4px
     td a
@@ -35,12 +39,6 @@
       @include site-link-color
       font-weight: bold
       font-size: 15px
-
-  #orgs_by_30_days_volume
-    min-height: 260px
-    margin-left: 20px
-    #sort_by
-      margin-top: 10px
 
   #most-active-orgs
     border-radius: 0
